tests/typestate_compile_fail/double_seccomp.stderr
error[E0599]: no method named `enable_seccomp` found for struct `Sandbox<ExecReady>` in the current scope
  --> tests/typestate_compile_fail/double_seccomp.rs:30:13
   |
30 |     sandbox.enable_seccomp(&seccomp_config);
   |             ^^^^^^^^^^^^^^ method not found in `Sandbox<ExecReady>`
   |
note: there's an earlier shadowed binding `sandbox` of type `Sandbox<PrivsLocked>` that has method `enable_seccomp` available
  --> tests/typestate_compile_fail/double_seccomp.rs:21:9
   |
21 |     let sandbox = sandbox.lock_privileges()
   |         ^^^^^^^ `sandbox` of type `Sandbox<PrivsLocked>` that has method `enable_seccomp` defined earlier here
...
25 |     let sandbox = sandbox.without_seccomp();
   |         ------- earlier `sandbox` shadowed here with type `Sandbox<ExecReady>`
   = note: the method was found for
           - `Sandbox<PrivsLocked>`
